<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bttn_kayitol"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txt_kayitol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/yeni_hesap_olu_turabilirsiniz"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtbx_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="25dp"
                android:hint="@string/e_mail"
                android:background="@drawable/radiusbttnwhite"
                android:maxLength="@integer/emailustsinir"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/txtbx_sifre"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/radiusbttnwhite"
                android:layout_marginTop="20dp"
                android:paddingLeft="25dp"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:maxLength="@integer/sifreustsinir"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/txtbx_sifreretry"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/radiusbttnwhite"
                android:layout_marginTop="20dp"
                android:paddingLeft="25dp"
                android:hint="@string/sifre_tekrar"
                android:inputType="textPassword"
                android:maxLength="@integer/sifreustsinir"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/txtbx_kullaniciadi"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/txtbx_sifreretry"
                android:background="@drawable/radiusbttnwhite"
                android:layout_marginTop="20dp"
                android:paddingLeft="25dp"
                android:hint="@string/kullanici_ad"
                android:maxLength="@integer/sifreustsinir"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/abc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lise"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"/>

                <Switch
                    android:id="@+id/swicthogrenci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/abc"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toRightOf="@+id/abc" />

                <TextView
                    android:id="@+id/abcd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/niversite"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/swicthogrenci"
                    android:layout_toRightOf="@+id/swicthogrenci" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/bttn_kayitol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/bttn_girisyap"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radiusbttnwhite"
        android:text="@string/kayit_ol"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/bttn_girisyap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radiusbttnwhite"
        android:text="@string/giris_yap"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>