<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.WelcomeActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/uygresim"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtdernotuaraci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ders_notu_hesaplama_arac"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/uygresim"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/radiusbttn"
        android:text="@string/kay_t_ol"
        android:textColor="@android:color/white"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register"
        android:layout_marginBottom="10dp"
        android:background="@drawable/radiusbttn"
        android:text="@string/giri_yap"
        android:textColor="@android:color/white"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

</RelativeLayout>